--- a/developer.html
+++ b/developer.html
@@ -4,700 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zift Studio - Developer</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/CSS/developer.css">
     <link rel="stylesheet" href="styles/homepage.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-
-    <style>
-        /* Aynı ana sayfa stilinden temel kısımlar */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        :root {
-            --primary-black: #0a0a0a;
-            --secondary-black: #1a1a1a;
-            --accent-red: #dc2626;
-            --light-gray: #f5f5f5;
-            --dark-gray: #333333;
-            --medium-gray: #666666;
-            --gradient-bg: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #dc2626 100%);
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: var(--primary-black);
-            color: var(--light-gray);
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(10, 10, 10, 0.95);
-            backdrop-filter: blur(10px);
-            z-index: 1000;
-            padding: 1rem 0;
-            transition: all 0.3s ease;
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 2rem;
-        }
-
-        .logo {
-            font-size: 2rem;
-            font-weight: bold;
-            background: linear-gradient(45deg, var(--accent-red), #ff4444);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            color: var(--light-gray);
-            text-decoration: none;
-            font-weight: 500;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .nav-links a:hover {
-            color: var(--accent-red);
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: var(--accent-red);
-            transition: width 0.3s ease;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-        .mobile-menu {
-            display: none;
-            background: none;
-            border: none;
-            color: var(--light-gray);
-            font-size: 1.5rem;
-            cursor: pointer;
-        }
-
-        /* Başlık Bölümü */
-        .hero {
-            height: 60vh;
-            background: var(--gradient-bg);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-            padding: 0 2rem;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="4" height="4" patternUnits="userSpaceOnUse"><path d="M 4 0 L 0 0 0 4" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>') no-repeat center center/cover;
-            opacity: 0.3;
-            z-index: 1;
-        }
-
-        .hero-content {
-            max-width: 800px;
-            z-index: 2;
-            position: relative;
-            color: var(--light-gray);
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
-            animation: fadeInUp 1s ease;
-        }
-
-        .hero .subtitle {
-            font-size: 1.5rem;
-            margin-bottom: 2rem;
-            color: var(--medium-gray);
-            animation: fadeInUp 1s ease 0.2s both;
-        }
-
-        /* İçerik Bölümü */
-        .container {
-            max-width: 1200px;
-            margin: 3rem auto 5rem;
-            padding: 0 2rem;
-        }
-
-        .section-title {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            background: linear-gradient(45deg, var(--light-gray), var(--accent-red));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        /* Developer Skills Grid */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
-        }
-
-        .skill-card {
-            background: var(--secondary-black);
-            padding: 2rem;
-            border-radius: 15px;
-            border: 1px solid var(--dark-gray);
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .skill-card:hover {
-            transform: translateY(-10px);
-            border-color: var(--accent-red);
-            box-shadow: 0 20px 40px rgba(220, 38, 38, 0.2);
-        }
-
-        .skill-icon {
-            font-size: 3rem;
-            color: var(--accent-red);
-            margin-bottom: 1rem;
-        }
-
-        .skill-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .skill-card p {
-            color: var(--medium-gray);
-            line-height: 1.6;
-        }
-
-        /* Projects Section */
-        .projects {
-            margin-top: 4rem;
-        }
-
-        .project-list {
-            list-style: none;
-            padding-left: 0;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .project-list li {
-            background: var(--primary-black);
-            border: 1px solid var(--dark-gray);
-            border-radius: 10px;
-            padding: 1rem 1.5rem;
-            margin-bottom: 1rem;
-            transition: all 0.3s ease;
-        }
-
-        .project-list li:hover {
-            border-color: var(--accent-red);
-            box-shadow: 0 10px 25px rgba(220, 38, 38, 0.3);
-            transform: translateY(-3px);
-        }
-
-        .project-list a {
-            color: var(--accent-red);
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        .project-list a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .mobile-menu {
-                display: block;
-            }
-
-            .nav-links {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 100%;
-                background: var(--primary-black);
-                flex-direction: column;
-                padding: 1rem;
-                gap: 1rem;
-            }
-
-            .nav-links.active {
-                display: flex;
-            }
-
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero .subtitle {
-                font-size: 1.2rem;
-            }
-
-            .skills-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .container {
-                padding: 0 1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .nav-container {
-                padding: 0 1rem;
-            }
-
-            .container {
-                padding: 0 1rem;
-            }
-
-            .hero h1 {
-                font-size: 2rem;
-            }
-        }
-
-        /* Animations */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-    </style>
-
-    <style>
-        .pricing-section {
-    margin-top: 4rem;
-    margin-bottom: 6rem;
-    color: var(--light-gray);
-}
-
-.pricing-intro {
-    max-width: 700px;
-    margin: 0 auto 2rem auto;
-    font-size: 1.1rem;
-    color: var(--medium-gray);
-    text-align: center;
-}
-
-.pricing-cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 2.5rem;
-    margin-bottom: 3rem;
-}
-
-.pricing-card {
-    background: var(--secondary-black);
-    border-radius: 15px;
-    border: 1px solid var(--dark-gray);
-    padding: 2rem 1.5rem;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    transition: all 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.pricing-card:hover {
-    border-color: var(--accent-red);
-    box-shadow: 0 20px 40px rgba(220, 38, 38, 0.4);
-    transform: translateY(-10px);
-}
-
-.pricing-card h3 {
-    font-size: 1.8rem;
-    margin-bottom: 0.5rem;
-    color: var(--accent-red);
-}
-
-.pricing-card .price {
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-bottom: 1.2rem;
-    color: var(--light-gray);
-}
-
-.pricing-card ul {
-    list-style: none;
-    padding-left: 0;
-    margin-bottom: 1.5rem;
-    color: var(--medium-gray);
-    font-size: 1rem;
-}
-
-.pricing-card ul li {
-    margin-bottom: 0.7rem;
-}
-
-.btn-contact {
-    background-color: var(--accent-red);
-    color: var(--light-gray);
-    border: none;
-    padding: 0.7rem 1.5rem;
-    font-weight: 600;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    align-self: center;
-    text-transform: uppercase;
-}
-
-.btn-contact:hover {
-    background-color: #b22222;
-}
-
-.table-title {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
-    color: var(--accent-red);
-}
-
-.table-wrapper {
-    overflow-x: auto;
-}
-
-.pricing-table {
-    width: 100%;
-    border-collapse: collapse;
-    text-align: center;
-    font-size: 0.95rem;
-    min-width: 700px;
-}
-
-.pricing-table thead {
-    background: var(--secondary-black);
-    color: var(--accent-red);
-    border-bottom: 2px solid var(--accent-red);
-}
-
-.pricing-table th, .pricing-table td {
-    padding: 1rem 0.8rem;
-    border: 1px solid var(--dark-gray);
-}
-
-.pricing-table tbody tr:hover {
-    background: rgba(220, 38, 38, 0.1);
-}
-
-.pricing-table td:first-child {
-    text-align: left;
-    font-weight: 600;
-    color: var(--light-gray);
-}
-
-@media (max-width: 768px) {
-    .pricing-cards {
-        grid-template-columns: 1fr;
-    }
-    .pricing-table {
-        min-width: 100%;
-        font-size: 0.9rem;
-    }
-}
-
-    </style>
-
-    <style>
-        /* Temel renk değişkenleri */
-:root {
-  --dark-bg: #121212;
-  --dark-bg-alt: #1e1e1e;
-  --primary-color: #e63946;
-  --text-light: #f1f1f1;
-  --text-muted: #b0b0b0;
-  --input-bg: #2c2c2c;
-  --input-border: #444;
-}
-
-.footer {
-  background-color: var(--dark-bg);
-  color: var(--text-light);
-  padding: 3rem 1.5rem 1.5rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.footer-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 2.5rem;
-  padding-bottom: 2rem;
-  border-bottom: 1px solid #333;
-}
-
-.footer-logo {
-  font-size: 2rem;
-  color: var(--primary-color);
-  margin-bottom: 1rem;
-  font-weight: 700;
-}
-
-.footer-about p {
-  line-height: 1.6;
-  color: var(--text-muted);
-  margin-bottom: 1.5rem;
-}
-
-.footer-socials {
-  display: flex;
-  gap: 1rem;
-}
-
-.social-link {
-  color: var(--text-muted);
-  font-size: 1.3rem;
-  transition: color 0.3s ease;
-}
-
-.social-link:hover {
-  color: var(--primary-color);
-}
-
-.footer-links h3,
-.footer-contact h3,
-.footer-newsletter h3 {
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-  font-weight: 600;
-  color: var(--primary-color);
-}
-
-.footer-links ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-links ul li {
-  margin-bottom: 0.8rem;
-}
-
-.footer-links ul li a {
-  color: var(--text-muted);
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.footer-links ul li a:hover {
-  color: var(--primary-color);
-  text-decoration: underline;
-}
-
-.footer-contact p {
-  margin-bottom: 1rem;
-  color: var(--text-muted);
-  font-size: 0.95rem;
-  display: flex;
-  align-items: center;
-  gap: 0.6rem;
-}
-
-.footer-contact i {
-  color: var(--primary-color);
-  font-size: 1.1rem;
-}
-
-.footer-newsletter form {
-  display: flex;
-  gap: 0.7rem;
-  margin-bottom: 0.8rem;
-}
-
-.footer-newsletter input[type="email"] {
-  flex: 1;
-  padding: 0.6rem 1rem;
-  border: 1px solid var(--input-border);
-  border-radius: 30px;
-  background-color: var(--input-bg);
-  color: var(--text-light);
-  font-size: 1rem;
-  outline: none;
-  transition: border-color 0.3s ease;
-}
-
-.footer-newsletter input[type="email"]:focus {
-  border-color: var(--primary-color);
-}
-
-.footer-newsletter button {
-  background-color: var(--primary-color);
-  border: none;
-  padding: 0 1.3rem;
-  border-radius: 30px;
-  color: var(--text-light);
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.footer-newsletter button:hover {
-  background-color: #b92c34;
-}
-
-.newsletter-desc {
-  font-size: 0.85rem;
-  color: var(--text-muted);
-}
-
-.footer-bottom {
-  text-align: center;
-  padding: 1rem 0;
-  font-size: 0.9rem;
-  color: var(--text-muted);
-  margin-top: 1.5rem;
-  border-top: 1px solid #333;
-}
-
-/* Responsive Tasarım */
-@media (max-width: 768px) {
-  .footer-container {
-    grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .footer-container {
-    grid-template-columns: 1fr;
-  }
-}
-
-    </style>
-
-    /teklif <butonu>
-    <style>
-        /* Modal arka plan */
-.modal {
-  display: none; /* Başlangıçta gizli */
-  position: fixed;
-  z-index: 1500;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.7);
-  backdrop-filter: blur(4px);
-}
-
-/* Modal içerik kutusu */
-.modal-content {
-  background-color: var(--secondary-black);
-  margin: 10% auto;
-  padding: 2rem;
-  border-radius: 12px;
-  width: 90%;
-  max-width: 400px;
-  color: var(--light-gray);
-  box-shadow: 0 0 20px rgba(220, 38, 38, 0.7);
-  text-align: center;
-  position: relative;
-}
-
-/* Kapatma butonu */
-.close-btn {
-  position: absolute;
-  top: 12px;
-  right: 18px;
-  color: var(--accent-red);
-  font-size: 2rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.close-btn:hover {
-  color: #b91c1c;
-}
-
-/* Modal başlığı */
-.modal-content h3 {
-  margin-bottom: 1rem;
-  color: var(--accent-red);
-}
-
-/* Butonlar kapsayıcısı */
-.modal-buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-/* Butonlar */
-.modal-btn {
-  display: inline-block;
-  background-color: var(--accent-red);
-  color: var(--light-gray);
-  padding: 0.8rem 1.5rem;
-  border-radius: 30px;
-  font-weight: 600;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: background-color 0.3s ease;
-}
-
-.modal-btn:hover {
-  background-color: #b22222;
-}
-
-/* Responsive */
-@media (max-width: 480px) {
-  .modal-content {
-    margin: 20% 1rem;
-    width: auto;
-  }
-}
-
-    </style>
+    
 </head>
 <body>
     <!-- Navigation -->
@@ -1007,50 +318,6 @@
   </div>
 </footer>
 
-
-    <script>
-        // Mobile menu toggle
-        function toggleMobileMenu() {
-            const navLinks = document.querySelector('.nav-links');
-            navLinks.classList.toggle('active');
-        }
-
-        // Navbar background on scroll
-        window.addEventListener('scroll', function () {
-            const navbar = document.querySelector('.navbar');
-            if (window.scrollY > 100) {
-                navbar.style.background = 'rgba(10, 10, 10, 0.98)';
-            } else {
-                navbar.style.background = 'rgba(10, 10, 10, 0.95)';
-            }
-        });
-    </script>
-
-    teklif butonu
-    <script>
-        // Modal elementi
-const modal = document.getElementById('offerModal');
-
-// Tüm "Teklif Al" butonlarını seç ve tıklama olayına modal açmayı ekle
-document.querySelectorAll('.btn-contact').forEach(button => {
-  button.addEventListener('click', () => {
-    modal.style.display = 'block';
-  });
-});
-
-// Kapatma butonuna tıklayınca modalı kapat
-function closeModal() {
-  modal.style.display = 'none';
-}
-
-// Modal dışında bir yere tıklanırsa modal kapansın
-window.onclick = function(event) {
-  if (event.target === modal) {
-    modal.style.display = 'none';
-  }
-};
-
-    </script>
-
+    <script src="/JS/developer.js"></script>
 </body>
 </html>
