--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
     <title>Zift Studio - Yazılım & Tasarım</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-</head>
+</head>  
+
 <body>
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">Zift Studio</div>
             <ul class="nav-links">
-                <li><a href="#home">Ana Sayfa</a></li>
+                <li><a href="#home" data-section="home">Ana Sayfa</a></li>
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html">Create</a></li>
-                <li><a href="#contact">İletişim</a></li>
+                <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
+                <li><a href="#tools" data-section="tools">Teknolojiler</a></li>
+                <li><a href="#contact" data-section="contact">İletişim</a></li>
             </ul>
-            <button class="mobile-menu" onclick="toggleMobileMenu()">
-                <i class="fas fa-bars"></i>
-            </button>
+            <div class="nav-controls">
+                <button class="theme-toggle" title="Tema Değiştir">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
         </div>
     </nav>
 
@@ -154,7 +165,6 @@
                 </div>
 
                 <form class="contact-form" action="php/contact.php" method="POST">
-                
                     <div class="form-group">
                         <label for="name">Ad Soyad</label>
                         <input type="text" id="name" name="name" required>
@@ -165,7 +175,7 @@
                     </div>
                     <div class="form-group">
                         <label for="project">Proje Türü</label>
-                        <select id="project" name="project" style="width: 100%; padding: 1rem; background: var(--secondary-black); border: 1px solid var(--dark-gray); border-radius: 8px; color: var(--light-gray); font-size: 1rem;">
+                        <select id="project" name="project" required>
                             <option value="">Seçiniz</option>
                             <option value="web">Web Sitesi</option>
                             <option value="mobile">Mobil Uygulama</option>
@@ -184,47 +194,48 @@
         </div>
     </section>
 
-     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
-  <div class="footer-container">
-    <!-- Logo ve Kısa Açıklama -->
-    <div class="footer-about">
-      <h2 class="footer-logo">Zift Studio</h2>
-      <p>Yenilikçi çözümlerle dijital dünyada yanınızdayız.</p>
-      <div class="footer-socials">
-        <a href="#" aria-label="Facebook" class="social-link"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Twitter" class="social-link"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/zift.studio?igsh=MWNlMXEwcXd1ZTBmZQ==" aria-label="Instagram" class="social-link"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="LinkedIn" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-    </div>
+        <div class="footer-container">
+            <!-- Logo ve Kısa Açıklama -->
+            <div class="footer-about">
+                <h2 class="footer-logo">Zift Studio</h2>
+                <p>Yenilikçi çözümlerle dijital dünyada yanınızdayız.</p>
+                <div class="footer-socials">
+                    <a href="#" aria-label="Facebook" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Twitter" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/zift.studio?igsh=MWNlMXEwcXd1ZTBmZQ==" aria-label="Instagram" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="LinkedIn" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
 
-    <!-- Hızlı Linkler -->
-    <div class="footer-links">
-      <h3>Hızlı Linkler</h3>
-      <ul>
-        <li><a href="#">Anasayfa</a></li>
-        <li><a href="#">Hakkımızda</a></li>
-        <li><a href="#">Hizmetler</a></li>
-        <li><a href="#">Projeler</a></li>
-        <li><a href="#">İletişim</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </div>
+            <!-- Hızlı Linkler -->
+            <div class="footer-links">
+                <h3>Hızlı Linkler</h3>
+                <ul>
+                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="#services">Hizmetler</a></li>
+                    <li><a href="#tools">Teknolojiler</a></li>
+                    <li><a href="#contact">İletişim</a></li>
+                    <li><a href="developer.html">Developer</a></li>
+                    <li><a href="create.html">Create</a></li>
+                </ul>
+            </div>
 
-    <!-- İletişim Bilgileri -->
-    <div class="footer-contact">
-      <h3>İletişim</h3>
-      <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
-      <p><i class="fas fa-phone-alt"></i> +90 542 478 62 54</p>
-      <p><i class="fas fa-envelope"></i> muhammedalikitir.tr@gmail.com</p>
-    </div>
+            <!-- İletişim Bilgileri -->
+            <div class="footer-contact">
+                <h3>İletişim</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
+                <p><i class="fas fa-phone-alt"></i> +90 542 478 62 54</p>
+                <p><i class="fas fa-envelope"></i> muhammedalikitir.tr@gmail.com</p>
+            </div>
+        </div>
 
-  <div class="footer-bottom">
-    <p>© 2025 Zift Studio. Tüm hakları saklıdır.</p>
-  </div>
-</footer>
+        <div class="footer-bottom">
+            <p>© 2025 Zift Studio. Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
 
-    <script src="index.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
