--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zift Studio - Create</title>
-    <link rel="stylesheet" href="create.css">
+    <link rel="stylesheet" href="/CSS/create.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
@@ -214,6 +214,6 @@
         </div>
     </footer>
 
-    <script src="create.js"></script>
+    <script src="/JS/create.js"></script>
 </body>
 </html>
