--- a/developer-x.html
+++ b/developer-x.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zift Studio - Create</title>
-    <link rel="stylesheet" href="/CSS/developer-x.css"> 
+    <link rel="stylesheet" href="developer-x.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     
@@ -170,5 +170,5 @@
         </div>
     </footer>
 
-    <script src="/JS/developer-x.js"></script> </body>
+    <script src="developer-x.js"></script> </body>
 </html>
