--- a/developer.html
+++ b/developer.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="index.html#home">Ana Sayfa</a></li>
                 <li><a href="developer.html" class="active">Developer</a></li>
-                <li><a href="developer-x.html">Projeler</a></li>
+                <li><a href="proge.html">Projeler</a></li>
                 <li><a href="create.html">Create</a></li>
                 <li><a href="index.html#contact">İletişim</a></li>
             </ul>
