--- a/create.html
+++ b/create.html
@@ -20,6 +20,7 @@
                 <li><a href="index.html#home">Ana Sayfa</a></li>
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html" class="active">Create</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="index.html#contact">İletişim</a></li>
             </ul>
             <div class="nav-controls">
