--- a/developer.html
+++ b/developer.html
@@ -22,6 +22,7 @@
                 <li><a href="developer.html" class="active">Developer</a></li>
                 <li><a href="proge.html">Projeler</a></li>
                 <li><a href="create.html">Create</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="index.html#contact">İletişim</a></li>
             </ul>
             <div class="nav-controls">
