--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zift Studio - Yazılım & Tasarım</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    
 </head>  
 
 <body>
@@ -20,6 +21,7 @@
                 <li><a href="#home" data-section="home">Ana Sayfa</a></li>
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html">Create</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
                 <li><a href="#tools" data-section="tools">Teknolojiler</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
