--- a/proge.html
+++ b/proge.html
@@ -21,6 +21,7 @@
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="proge.html" class="active">Projeler</a></li>
                 <li><a href="create.html">Create</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="index.html#contact">İletişim</a></li>
             </ul>
             <div class="nav-controls">
