--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zift Studio - Shop</title>
-    <link rel="stylesheet" href="/CSS/shop.css">
+    <link rel="stylesheet" href="shop.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
 </head> 
@@ -339,6 +339,7 @@
         </div>
     </footer>
 
-   <script src="/JS/shop.js"></script>
+   <script src="shop.js"></script>
 </body>
 </html>
+
