--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Zift Studio - Yazılım & Tasarım</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+    <meta name="keywords" content="Zift Studio, web tasarım, grafik tasarım, marka kimliği, UX/UI, dijital pazarlama, yaratıcı ajans" />
+    <meta name="description" content="Zift Studio - Web tasarım, grafik, marka kimliği, UX/UI ve dijital pazarlama hizmetleri sunan yaratıcı ajans. Profesyonel çözümlerle markanızı dijital dünyada öne çıkarın." />
+    <meta property="og:title" content="Zift Studio | Yaratıcı Web Tasarım ve Dijital Çözümler" />
+    <meta property="og:description" content="Web tasarım, grafik, marka kimliği, UX/UI ve dijital pazarlama hizmetleri sunan Zift Studio ile markanızı dijital dünyada öne çıkarın." />
+    <meta property="og:url" content="http://www.ziftstudio.digital/" />
+    <meta property="og:type" content="website" />
+
     
 </head>  
 
@@ -241,3 +249,4 @@
    <script src="index.js"></script>
 </body>
 </html>
+
