--- a/create.html
+++ b/create.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zift Studio, yaratıcı süreçler ve tasarım hizmetleri sunan bir stüdyodur.">
+    <meta name="keywords" content="tasarım, 3D modelleme, animasyon, grafik tasarım, yaratıcı süreçler">
     <title>Zift Studio - Create</title>
-    <link rel="stylesheet" href="create.css">
+    <link rel="stylesheet" href="/CSS/create.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
@@ -215,6 +217,6 @@
         </div>
     </footer>
 
-    <script src="create.js"></script>
+    <script src="/JS/create.js"></script>
 </body>
 </html>
