--- a/developer.html
+++ b/developer.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
+    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <title>Zift Studio - Developer</title>
-    <link rel="stylesheet" href="developer.css">
+    <link rel="stylesheet" href="/CSS/developer.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     
@@ -317,6 +319,6 @@
         </div>
     </footer>
 
-    <script src="developer.js"></script>
+    <script src="/JS/developer.js"></script>
 </body>
 </html>
