--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
+    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <title>Zift Studio - Yazılım & Tasarım</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
-    <meta name="keywords" content="Zift Studio, web tasarım, grafik tasarım, marka kimliği, UX/UI, dijital pazarlama, yaratıcı ajans" />
-    <meta name="description" content="Zift Studio - Web tasarım, grafik, marka kimliği, UX/UI ve dijital pazarlama hizmetleri sunan yaratıcı ajans. Profesyonel çözümlerle markanızı dijital dünyada öne çıkarın." />
-    <meta property="og:title" content="Zift Studio | Yaratıcı Web Tasarım ve Dijital Çözümler" />
-    <meta property="og:description" content="Web tasarım, grafik, marka kimliği, UX/UI ve dijital pazarlama hizmetleri sunan Zift Studio ile markanızı dijital dünyada öne çıkarın." />
-    <meta property="og:url" content="http://www.ziftstudio.digital/" />
-    <meta property="og:type" content="website" />
-
     
 </head>  
 
@@ -246,7 +240,6 @@
         </div>
     </footer>
 
-   <script src="index.js"></script>
+   <script src="/JS/index.js"></script>
 </body>
 </html>
-
