--- a/proge.html
+++ b/proge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Zift Studio'nun gerçekleştirdiği profesyonel web projeleri. E-ticaret, kurumsal web siteleri, WordPress çözümleri ve özel yazılım projeleri." />
+    <meta name="keywords" content="profesyonel web projeleri, e-ticaret, kurumsal web siteleri, WordPress çözümleri, özel yazılım projeleri">
     <title>Zift Studio - Profesyonel Web Projeleri Portföyü</title>
     <link rel="stylesheet" href="proge.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
