--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
     <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <title>Zift Studio - Yazılım & Tasarım</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
 </head>  
@@ -240,6 +240,7 @@
         </div>
     </footer>
 
-   <script src="/JS/index.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
+
