--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zift Studio, yazılım geliştirme ve 3D tasarım alanında uzmanlaşmış bir stüdyodur.">
+    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <title>Zift Studio - Shop</title>
     <link rel="stylesheet" href="shop.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -48,12 +50,6 @@
         </div>
     </section>
    
-
-
-
-
-
-
 
     <!-- Shop Section -->
     <section class="shop-section" id="products">
@@ -342,4 +338,3 @@
    <script src="shop.js"></script>
 </body>
 </html>
-
