--- a/article.html
+++ b/article.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
     <title>Zift Studio - Makaleler </title>
-    <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/article.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="article.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
 </head>  
@@ -225,7 +225,8 @@
         </div>
     </footer>
 
-   <script src="/JS/article.js"></script>
-   <script src="/JS/index.js"></script>
+   <script src="article.js"></script>
+   <script src="index.js"></script>
 </body>
+
 </html>
