--- a/create.html
+++ b/create.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Zift Studio, yaratıcı süreçler ve tasarım hizmetleri sunan bir stüdyodur.">
     <meta name="keywords" content="tasarım, 3D modelleme, animasyon, grafik tasarım, yaratıcı süreçler">
     <title>Zift Studio - Create</title>
-    <link rel="stylesheet" href="/CSS/create.css">
+    <link rel="stylesheet" href="create.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
@@ -218,6 +218,7 @@
         </div>
     </footer>
 
-    <script src="/JS/create.js"></script>
+    <script src="create.js"></script>
 </body>
+
 </html>
