--- a/proge.html
+++ b/proge.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Zift Studio'nun gerçekleştirdiği profesyonel web projeleri. E-ticaret, kurumsal web siteleri, WordPress çözümleri ve özel yazılım projeleri." />
     <meta name="keywords" content="profesyonel web projeleri, e-ticaret, kurumsal web siteleri, WordPress çözümleri, özel yazılım projeleri">
     <title>Zift Studio - Profesyonel Web Projeleri Portföyü</title>
-    <link rel="stylesheet" href="/CSS/proge.css"> 
+    <link rel="stylesheet" href="proge.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="canonical" href="https://www.ziftstudio.com/proge.html" />
@@ -376,6 +376,7 @@
         </div>
     </footer>
 
-    <script src="/JS/proge.js"></script>
+    <script src="proge.js"></script>
 </body>
+
 </html>
