--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Zift Studio, yazılım geliştirme ve 3D tasarım alanında uzmanlaşmış bir stüdyodur.">
     <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
     <title>Zift Studio - Shop</title>
-    <link rel="stylesheet" href="/CSS/shop.css">
+    <link rel="stylesheet" href="shop.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
 </head> 
@@ -333,6 +333,7 @@
         </div>
     </footer>
 
-   <script src="/JS/shop.js"></script>
+   <script src="shop.js"></script>
 </body>
 </html>
+
