--- a/tech-news.html
+++ b/tech-news.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="asrın icatlar, teknoloji, yapay zeka, blockchain, 5G, quantum bilgisayarlar">
     <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
     <title>Zift Studio - Teknoloji Haberleri</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
 </head>  
@@ -572,9 +572,9 @@
         </div>
     </footer>
 
-   <script src="/JS/index.js"></script>
+   <script src="index.js"></script>
    
-   <script src="/JS/tech.js"></script>
+   <script src="tech.js"></script>
 
    <script>
     // Daha fazlasını gör fonksiyonu
@@ -651,4 +651,5 @@
         });
    </script>
 </body>
+
 </html>
