--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Zift Studio - Yazılım & Tasarım</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://ziftstudio.digital",
+    "logo": "https://ziftstudio.digital/path-to-your-logo.png"
+  }
+  </script>
     
 </head>  
 
@@ -246,3 +255,4 @@
 </body>
 
 </html>
+
