--- a/tech-news.html
+++ b/tech-news.html
@@ -20,7 +20,7 @@
         <div class="nav-container">
             <div class="logo">Zift Studio</div>
             <ul class="nav-links">
-                <li><a href="#home">Ana Sayfa</a></li>
+                <li><a href="index.html">Ana Sayfa</a></li>
                 <li><a href="tech-news.html"data-section="tech-news">Teknoloji Haberleri</a></li>
                 <li><a href="article.html">Makaleler</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
