--- a/article.html
+++ b/article.html
@@ -22,7 +22,7 @@
         <div class="nav-container">
             <div class="logo">Zift Studio</div>
             <ul class="nav-links">
-                <li><a href="#home">Ana Sayfa</a></li>
+                <li><a href="index.html">Ana Sayfa</a></li>
                 <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
                 <li><a href="article.html" data-section="home">Makaleler</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
