--- a/article.html
+++ b/article.html
@@ -205,9 +205,9 @@
             <div class="footer-links">
                 <h3>Hızlı Linkler</h3>
                 <ul>
-                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="index.html">Ana Sayfa</a></li>
                     <li><a href="tech.html">Teknolojiler</a></li>
-                    <li><a href="#contact">İletişim</a></li>
+                    <li><a href="article.html">Makaleler</a></li>
                 </ul>
             </div>
 
