--- a/tech-news.html
+++ b/tech-news.html
@@ -552,7 +552,7 @@
             <div class="footer-links">
                 <h3>Hızlı Linkler</h3>
                 <ul>
-                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="index.html">Ana Sayfa</a></li>
                     <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
                     <li><a href="article.html">Makaleler</a></li>
                 </ul>
