--- a/article.html
+++ b/article.html
@@ -111,6 +111,36 @@
 
         <!-- Articles Grid -->
         <div class="articles-grid" id="articles-grid">
+        <!-- Örnek Makale Kartları -->
+<div class="article-card">
+    <h3>🚀 Web Geliştirmede 2025 Trendleri</h3>
+    <p>Yeni kütüphaneler, frameworkler ve teknolojilerle web geliştirme dünyasında neler değişiyor? Bu makalede keşfedin.</p>
+    <span class="article-meta">Kategori: Web Geliştirme | 2.1K Görüntülenme</span>
+</div>
+
+<div class="article-card">
+    <h3>📱 Flutter ile Mobil Uygulama Geliştirme</h3>
+    <p>Flutter kullanarak Android ve iOS için tek kod tabanıyla nasıl profesyonel uygulamalar geliştirebilirsiniz?</p>
+    <span class="article-meta">Kategori: Mobil | 1.8K Görüntülenme</span>
+</div>
+
+<div class="article-card">
+    <h3>🤖 Yapay Zeka ile Tasarımın Geleceği</h3>
+    <p>Yapay zeka destekli araçlar tasarımcıların işlerini nasıl kolaylaştırıyor ve geleceği nasıl şekillendiriyor?</p>
+    <span class="article-meta">Kategori: Yapay Zeka | 3.4K Görüntülenme</span>
+</div>
+
+<div class="article-card">
+    <h3>🎮 Unity ile Oyun Geliştirmeye Giriş</h3>
+    <p>Oyun geliştirmeye başlamak isteyenler için Unity’nin sunduğu özellikler ve başlangıç ipuçları.</p>
+    <span class="article-meta">Kategori: Oyun Geliştirme | 2.7K Görüntülenme</span>
+</div>
+
+<div class="article-card">
+    <h3>🌐 Blockchain Teknolojisinin Geleceği</h3>
+    <p>Kripto paraların ötesinde blockchain teknolojisinin farklı alanlardaki kullanım senaryoları.</p>
+    <span class="article-meta">Kategori: Blockchain | 1.2K Görüntülenme</span>
+</div>
             <!-- Articles will be populated by JavaScript -->
         </div>
 
