--- a/tech-news.html
+++ b/tech-news.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
     <title>Zift Studio - Teknoloji Haberleri</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="tech.news.css">
+    <link rel="stylesheet" href="tech-news.css">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
