--- a/tech-news.html
+++ b/tech-news.html
@@ -578,6 +578,8 @@
    
    <script src="tech.js"></script>
 
+   <script src="tech-news.js"></script>
+
    <script>
     // Daha fazlasını gör fonksiyonu
         function toggleSection(sectionName) {
