--- a/technologies.html
+++ b/technologies.html
@@ -1,1 +1,52 @@
-a
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
+    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
+    <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
+    <title>Zift Studio - Teknoloji</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="article.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+</head>  
+
+<body>
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
+
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">Zift Studio</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
+                <li><a href="article.html" data-section="home">Makaleler</a></li>
+                <li><a href="technologies.html" data-section="home">Makaleler</a></li>
+                <li><a href="#contact" data-section="contact">İletişim</a></li>
+            </ul>
+            <div class="nav-controls">
+                <button class="theme-toggle" title="Tema Değiştir">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </nav>
+
+<!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Zift Studio</h1>
+            <p class="subtitle">Yazılım Geliştirme & 3D Tasarım Stüdyosu</p>
+            <div class="cta-buttons">
+                <a href="#services" class="btn btn-primary">Hizmetlerimiz</a>
+                <a href="#contact" class="btn btn-secondary">İletişime Geç</a>
+            </div>
+        </div>
+    </section>
