--- a/technologies.html
+++ b/technologies.html
@@ -24,8 +24,8 @@
             <ul class="nav-links">
                 <li><a href="index.html">Ana Sayfa</a></li>
                 <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
-                <li><a href="article.html" data-section="home">Makaleler</a></li>
-                <li><a href="technologies.html" data-section="home">Makaleler</a></li>
+                <li><a href="article.html">Makaleler</a></li>
+                <li><a href="technologies.html" data-section="home">Teknoloji</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
             </ul>
             <div class="nav-controls">
@@ -50,3 +50,110 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+<!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <h2 class="section-title">İletişime Geçin</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h3>Projenizi Konuşalım</h3>
+                    <p>Hayal ettiğiniz projeyi birlikte hayata geçirelim. Yazılım geliştirme ve 3D tasarım konularında profesyonel destek için bizimle iletişime geçin.</p>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/zift.studio?igsh=MWNlMXEwcXd1ZTBmZQ==" target="_blank" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com" target="_blank" aria-label="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <form class="contact-form" action="php/contact.php" method="POST">
+                    <div class="form-group">
+                        <label for="name">Ad Soyad</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-posta</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="project">Proje Türü</label>
+                        <select id="project" name="project" required>
+                            <option value="">Seçiniz</option>
+                            <option value="web">Web Sitesi</option>
+                            <option value="mobile">Mobil Uygulama</option>
+                            <option value="game">Oyun</option>
+                            <option value="3d">3D Tasarım</option>
+                            <option value="other">Diğer</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mesajınız</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Gönder</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Logo ve Kısa Açıklama -->
+            <div class="footer-about">
+                <h2 class="footer-logo">Zift Studio</h2>
+                <p>Yenilikçi çözümlerle dijital dünyada yanınızdayız.</p>
+                <div class="footer-socials">
+                    <a href="#" aria-label="Facebook" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Twitter" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/zift.studio?igsh=MWNlMXEwcXd1ZTBmZQ==" aria-label="Instagram" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="LinkedIn" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+
+            <!-- Hızlı Linkler -->
+            <div class="footer-links">
+                <h3>Hızlı Linkler</h3>
+                <ul>
+                    <li><a href="index.html">Ana Sayfa</a></li>
+                    <li><a href="tech.html">Teknoloji Haberleri</a></li>
+                    <li><a href="article.html">Makaleler</a></li>
+                    <li><a href="technologies.html">Teknolojiler</a></li>
+                </ul>
+            </div>
+
+            <!-- İletişim Bilgileri -->
+            <div class="footer-contact">
+                <h3>İletişim</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
+                <p><i class="fas fa-phone-alt"></i> +90 542 478 62 54</p>
+                <p><i class="fas fa-envelope"></i> muhammedalikitir.tr@gmail.com</p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2025 Zift Studio. Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
+
+   <script src="article.js"></script>
+   <script src="index.js"></script>
+</body>
+
+</html>
