--- a/tech-news.html
+++ b/tech-news.html
@@ -25,6 +25,9 @@
                 <li><a href="index.html">Ana Sayfa</a></li>
                 <li><a href="tech-news.html"data-section="tech-news">Teknoloji Haberleri</a></li>
                 <li><a href="article.html">Makaleler</a></li>
+                <li><a href="technologies.html">Teknolojiler</a></li>
+
+
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
             </ul>
             <div class="nav-controls">
