--- a/tech-news.html
+++ b/tech-news.html
@@ -560,6 +560,7 @@
                     <li><a href="index.html">Ana Sayfa</a></li>
                     <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
                     <li><a href="article.html">Makaleler</a></li>
+                    <li><a href="technologies.html">Teknolojiler</a></li>
                 </ul>
             </div>
 
