--- a/technologies.html
+++ b/technologies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
-    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
+    <meta name="keywords" content="bilgisayar, telefon, tablet, tv, televizyon, teknoloji, yapay zeka,akıllı saat, bileklik, vision pro, akıllı gözlük, nano teknoloji, tıp teknolojileri, elektrik, internet">
     <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
     <title>Zift Studio - Teknoloji</title>
     <link rel="stylesheet" href="index.css">
@@ -54,7 +54,7 @@
 
 
 
-
+bilgisayar, telefon, tablet, tv, televizyon, teknoloji, yapay zeka,akıllı saat, bileklik, vision pro, akıllı gözlük, nano teknoloji, tıp teknolojileri, elektrik, internet
 
 
 
