--- a/technologies.html
+++ b/technologies.html
@@ -54,7 +54,136 @@
 
 
 
-bilgisayar, telefon, tablet, tv, televizyon, teknoloji, yapay zeka,akıllı saat, bileklik, vision pro, akıllı gözlük, nano teknoloji, tıp teknolojileri, elektrik, internet
+<!-- Teknolojik Aletler Bölümü -->
+<section class="tech-items">
+  <div class="container">
+    <h2 class="section-title">Teknolojik Aletler</h2>
+    <div class="items-grid">
+
+      <!-- Bilgisayar -->
+      <div class="item-card">
+        <img src="images/bilgisayar.jpg" alt="Bilgisayar">
+        <h3>Bilgisayar</h3>
+        <p>Karmaşık işlemleri gerçekleştiren modern teknolojinin temel cihazıdır.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Bilgisayarlar 20. yüzyılın ortalarında ortaya çıkmış, günümüzde günlük yaşamın vazgeçilmez parçası olmuştur. İş, eğitim, bilim ve eğlence alanlarında devrim yaratmıştır.</p>
+        </div>
+      </div>
+
+      <!-- Telefon -->
+      <div class="item-card">
+        <img src="images/telefon.jpg" alt="Telefon">
+        <h3>Telefon</h3>
+        <p>İnsanları birbirine bağlayan iletişim aracıdır.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Telefon 1876’da Graham Bell tarafından icat edilmiştir. Günümüzde akıllı telefonlar internet, kamera, uygulamalarla bir bilgisayarı cebimize taşımaktadır.</p>
+        </div>
+      </div>
+
+      <!-- Tablet -->
+      <div class="item-card">
+        <img src="images/tablet.jpg" alt="Tablet">
+        <h3>Tablet</h3>
+        <p>Taşınabilir dokunmatik ekranlı bilgisayar.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Tabletler dokunmatik ekran sayesinde kolay kullanım sağlar. Eğitim, iş ve eğlence alanlarında geniş kullanım imkanı sunar.</p>
+        </div>
+      </div>
+
+      <!-- TV -->
+      <div class="item-card">
+        <img src="images/tv.jpg" alt="Televizyon">
+        <h3>Televizyon</h3>
+        <p>Ses ve görüntüyü evlerimize taşıyan cihaz.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>1920’lerde geliştirilen televizyon, kitle iletişiminde devrim yaratmıştır. Günümüzde akıllı televizyonlar internetle birleşmiştir.</p>
+        </div>
+      </div>
+
+      <!-- Yapay Zeka -->
+      <div class="item-card">
+        <img src="images/yapay-zeka.jpg" alt="Yapay Zeka">
+        <h3>Yapay Zeka</h3>
+        <p>İnsan zekasını taklit eden yazılımlar.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Yapay zeka sağlık, otomotiv, finans ve günlük yaşamda devrim yaratıyor. Makine öğrenmesi ve derin öğrenme ile sürekli gelişiyor.</p>
+        </div>
+      </div>
+
+      <!-- Akıllı Saat -->
+      <div class="item-card">
+        <img src="images/akilli-saat.jpg" alt="Akıllı Saat">
+        <h3>Akıllı Saat</h3>
+        <p>Sağlık takibi ve iletişim sağlayan cihaz.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Akıllı saatler adım sayar, nabız ölçer, telefon görüşmesi yapabilir. Sağlık teknolojilerinde önemli rol oynamaktadır.</p>
+        </div>
+      </div>
+
+      <!-- Vision Pro -->
+      <div class="item-card">
+        <img src="images/vision-pro.jpg" alt="Vision Pro">
+        <h3>Vision Pro</h3>
+        <p>Apple’ın artırılmış gerçeklik gözlüğü.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Vision Pro, sanal ve artırılmış gerçekliği bir araya getirerek çalışma ve eğlence deneyimlerini değiştirmektedir.</p>
+        </div>
+      </div>
+
+      <!-- Nano Teknoloji -->
+      <div class="item-card">
+        <img src="images/nano.jpg" alt="Nano Teknoloji">
+        <h3>Nano Teknoloji</h3>
+        <p>Atomik ölçekte maddeyi değiştirme bilimi.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Nano teknoloji tıptan elektroniğe birçok alanda yenilikçi çözümler sunmaktadır. Geleceğin bilimidir.</p>
+        </div>
+      </div>
+
+      <!-- Tıp Teknolojileri -->
+      <div class="item-card">
+        <img src="images/tip.jpg" alt="Tıp Teknolojileri">
+        <h3>Tıp Teknolojileri</h3>
+        <p>Sağlık alanındaki teknolojik gelişmeler.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>MR cihazları, robotik cerrahi ve yapay organlar, tıbbın geleceğini şekillendiriyor.</p>
+        </div>
+      </div>
+
+      <!-- Elektrik -->
+      <div class="item-card">
+        <img src="images/elektrik.jpg" alt="Elektrik">
+        <h3>Elektrik</h3>
+        <p>Modern dünyanın enerji kaynağı.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>Elektrik olmadan modern teknoloji var olamazdı. Enerji üretimi ve depolama gelecekteki en büyük sorunlardan biridir.</p>
+        </div>
+      </div>
+
+      <!-- İnternet -->
+      <div class="item-card">
+        <img src="images/internet.jpg" alt="İnternet">
+        <h3>İnternet</h3>
+        <p>Dünyayı birbirine bağlayan küresel ağ.</p>
+        <button class="btn btn-info" onclick="toggleInfo(this)">Daha Fazla Bilgi</button>
+        <div class="item-info">
+          <p>1960’larda doğan internet, bugün milyarlarca insanı birbirine bağlamaktadır. Sosyal medya, e-ticaret ve bilgi paylaşımı onun ürünleridir.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
 
