--- a/technologies.html
+++ b/technologies.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
     <title>Zift Studio - Teknoloji</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="article.css">
+    <link rel="stylesheet" href="technologies.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
 </head>  
@@ -281,7 +281,7 @@
         </div>
     </footer>
 
-   <script src="article.js"></script>
+   <script src="technologies.js"></script>
    <script src="index.js"></script>
 </body>
 
