--- a/technologies.html
+++ b/technologies.html
@@ -9,6 +9,7 @@
     <title>Zift Studio - Teknoloji</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="technologies.css">
+    <link rel="stylesheet" href="article.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
 </head>  
