--- a/all.html
+++ b/all.html
@@ -1,1 +1,56 @@
-a
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zift Studio, modern web siteleri ve yazılım çözümleri sunar.">
+    <meta name="keywords" content="yazılım, tasarım, 3D, web geliştirme, mobil uygulama, oyun geliştirme">
+    <link rel="shortcut icon" href="/image/ziftstudio-logo-1.png"/>
+    <title>Zift Studio - Yazılım & Tasarım</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://ziftstudio.digital",
+    "logo": "https://ziftstudio.digital/ziftstudio-logo-1.png"
+  }
+  </script>
+
+</head>  
+
+<body>
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
+
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">Zift Studio</div>
+            <ul class="nav-links">
+                <li><a href="#home" data-section="home">Ana Sayfa</a></li>
+                <li><a href="developer.html">Developer</a></li>
+                <li><a href="proge.html">Projeler</a></li>
+                <li><a href="create.html">Create</a></li>
+                <li><a href="design.html">Tasarımlar</a></li>
+                <li><a href="technologies.html">Teknolojiler</a></li>
+                <li><a 
+href="article.html"></a>Makaleler</li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
+                <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
+                <li><a href="#tools" data-section="tools">Teknolojiler</a></li>
+                <li><a href="#contact" data-section="contact">İletişim</a></li>
+            </ul>
+            <div class="nav-controls">
+                <button class="theme-toggle" title="Tema Değiştir">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </nav>
