--- a/all.html
+++ b/all.html
@@ -54,3 +54,9 @@ href="article.html"></a>Makaleler</li>
             </div>
         </div>
     </nav>
+
+
+   <script src="index.js"></script>
+</body>
+
+</html>
