--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html">Create</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="tech-news.html">Teknoloji Haberleri</a></li>
+                <li><a href="tech-news.html">Teknoloji Haberleri</a></li> 
+                <li><a href="all.html">Site Sayfaları</a></li>
                 <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
                 <li><a href="#tools" data-section="tools">Teknolojiler</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
