--- a/all.html
+++ b/all.html
@@ -18,7 +18,143 @@
     "logo": "https://ziftstudio.digital/ziftstudio-logo-1.png"
   }
   </script>
+  
+  
+  <style>
+    /* Genel Navbar Stili */
+.navbar {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: rgba(0,0,0,0.85); /* Siyah arka plan için */
+    color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
 
+/* Beyaz arka plan desteklemek için tema sınıfı */
+.navbar.light {
+    background-color: rgba(255,255,255,0.95);
+    color: #111;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+/* Navbar container */
+.nav-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.7rem 1rem;
+}
+
+/* Logo stili */
+.navbar .logo {
+    font-size: 1.8rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    cursor: pointer;
+    color: inherit;
+}
+
+/* Menü linkleri */
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+}
+
+.nav-links li {
+    position: relative;
+}
+
+.nav-links li a {
+    text-decoration: none;
+    color: inherit;
+    padding: 0.5rem 0.8rem;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    font-weight: 500;
+}
+
+.nav-links li a:hover {
+    background-color: rgba(255,255,255,0.1); /* Siyah arka plan hover */
+}
+
+.navbar.light .nav-links li a:hover {
+    background-color: rgba(0,0,0,0.1); /* Beyaz arka plan hover */
+}
+
+/* Navbar kontrol butonları */
+.nav-controls {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.nav-controls button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: inherit;
+    transition: color 0.3s;
+}
+
+.nav-controls button:hover {
+    color: #ff6f61;
+}
+
+/* Mobil Menü Butonu */
+.mobile-menu {
+    display: none;
+}
+
+/* Responsive Menü */
+@media screen and (max-width: 992px) {
+    .nav-links {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: inherit;
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.4s ease;
+    }
+
+    .nav-links li a {
+        width: 100%;
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+    .nav-links.active {
+        max-height: 500px;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+}
+
+/* Tema değişimi için ikon renk geçişi */
+.theme-toggle i {
+    transition: transform 0.3s ease;
+}
+
+.theme-toggle.active i {
+    transform: rotate(180deg);
+}  
+
+   </style>
 </head>  
 
 <body>
