--- a/all.html
+++ b/all.html
@@ -20,7 +20,183 @@
   </script>
   
   
- 
+  <style>
+    /* index.css */
+
+/* --- Genel Ayarlar --- */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    background-color: #f5f5f5;
+    color: #333;
+    line-height: 1.6;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* --- Navbar --- */
+.navbar {
+    width: 100%;
+    background-color: #1a1a1a;
+    color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+}
+
+.nav-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+}
+
+.logo {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #ff6b6b;
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 1rem;
+}
+
+.nav-links li a {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.nav-links li a:hover {
+    background-color: #ff6b6b;
+    color: #fff;
+}
+
+/* --- Navbar Kontrolleri --- */
+.nav-controls {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.nav-controls button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.nav-controls button:hover {
+    background-color: #ff6b6b;
+}
+
+/* --- Mobil Menü --- */
+.mobile-menu {
+    display: none;
+}
+
+.mobile-menu-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    z-index: 900;
+}
+
+/* --- Tema Değiştirici --- */
+.theme-toggle i {
+    font-size: 1.2rem;
+}
+
+/* --- Responsive --- */
+@media screen and (max-width: 992px) {
+    .nav-links {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: 250px;
+        background-color: #1a1a1a;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 3rem;
+        gap: 1rem;
+        transition: right 0.3s ease;
+        z-index: 950;
+    }
+
+    .nav-links li a {
+        width: 100%;
+    }
+
+    .nav-links.active {
+        right: 0;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    .mobile-menu-overlay.active {
+        display: block;
+    }
+}
+
+/* --- Tema: Dark ve Light --- */
+body.light-theme {
+    background-color: #f5f5f5;
+    color: #333;
+}
+
+body.light-theme .navbar {
+    background-color: #fff;
+    color: #333;
+}
+
+body.light-theme .nav-links li a:hover,
+body.light-theme .nav-controls button:hover {
+    background-color: #1a1a1a;
+    color: #fff;
+}
+
+body.dark-theme {
+    background-color: #121212;
+    color: #fff;
+}
+
+body.dark-theme .navbar {
+    background-color: #1a1a1a;
+    color: #fff;
+}
+
+body.dark-theme .nav-links li a:hover,
+body.dark-theme .nav-controls button:hover {
+    background-color: #ff6b6b;
+    color: #fff;
+}
+  </style>
 </head>  
 
 <body>
