--- a/proge.html
+++ b/proge.html
@@ -59,6 +59,8 @@
             <p class="intro-text">Güvenli altyapı, kullanıcı dostu arayüz ve yüksek dönüşüm oranları sağladığımız e-ticaret projelerimiz.</p>
             
             <div class="project-grid">
+
+
                 <!-- Proje 1 -->
                 <div class="project-card" data-category="ecommerce">
                     <div class="project-image">
@@ -108,6 +110,39 @@
             </div>
         </div>
 
+
+
+
+
+                <!-- Proje 3 -->
+                <div class="project-card" data-category="ecommerce">
+                    <div class="project-image">
+                        <img src="/image/emirhantazegül.png" alt="Emirhan Tazegül Web Sitesi" loading="lazy">
+                        <div class="project-overlay">
+                            <a href="https://www.emirhantazegül.site" class="view-project" target="_blank" rel="noopener">Siteyi Görüntüle</a>
+                        </div>
+                    </div>
+                    <div class="project-details">
+                        <h3>Biyografi Sitesi</h3>
+                        <p class="project-description">       67.</p>
+                        <div class="project-tech">
+                            <span>WordPress</span>
+                            <span>WooCommerce</span>
+                            <span>MySQL</span>
+                        </div>
+                        <div class="project-client">
+                            <strong>Müşteri:</strong> TeknoDünya A.Ş.
+                        </div>
+                        <a href="case-study.html" class="project-link">Proje Detayları →</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
         <!-- Kurumsal Projeler -->
         <div class="project-category" id="corporate-projects">
             <h2 class="section-title">Kurumsal Web Projeleri</h2>
@@ -132,7 +167,7 @@
                             <span>PHP</span>
                         </div>
                         <div class="project-client">
-                            <strong>Müşteri:</strong> Konya Valiliği
+                            <strong>Müşteri:</strong> KONPARLAMENTO 
                         </div>
                         <a href="case-study.html" class="project-link">Proje Detayları →</a>
                     </div>
