--- a/proge.html
+++ b/proge.html
@@ -124,14 +124,14 @@
                     </div>
                     <div class="project-details">
                         <h3>Biyografi Sitesi</h3>
-                        <p class="project-description">       67.</p>
+                        <p class="project-description">Kişisel tanıtım amacıyla hazırlanmış bir web sitesidir. Site, ana sayfada genel bilgilere yer verirken; randevu ve iletişim formları kullanıcıların kolayca ulaşabilmesini sağlar. Galeri bölümü görselleri sergiler, oyunlar ve programlar sayfaları ek içerikler sunar. Tasarım mobil uyumlu olup SEO ayarları yapılmıştır, bu sayede siteye hızlı erişim ve kullanıcı dostu bir kullanım deneyimi sağlanır.</p>
                         <div class="project-tech">
                             <span>WordPress</span>
                             <span>WooCommerce</span>
-                            <span>MySQL</span>
+                            <span>PHP</span>
                         </div>
                         <div class="project-client">
-                            <strong>Müşteri:</strong> TeknoDünya A.Ş.
+                            <strong>Müşteri:</strong> EMİRHAN TAZEGÜL
                         </div>
                         <a href="case-study.html" class="project-link">Proje Detayları →</a>
                     </div>
