--- a/proge.html
+++ b/proge.html
@@ -119,7 +119,7 @@
                     <div class="project-image">
                         <img src="/image/emirhantazegül.png" alt="Emirhan Tazegül Web Sitesi" loading="lazy">
                         <div class="project-overlay">
-                            <a href="https://www.emirhantazegül.site" class="view-project" target="_blank" rel="noopener">Siteyi Görüntüle</a>
+                            <a href="https://www.xn--emirhantazegl-7ob.site/" class="view-project" target="_blank" rel="noopener">Siteyi Görüntüle</a>
                         </div>
                     </div>
                     <div class="project-details">
